k8s/pf-analytic-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pf-analytic-service
  labels:
    app: pf-analytic-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pf-analytic-service
  template:
    metadata:
      labels:
        app: pf-analytic-service
    spec:
      containers:
      - name: pf-analytic-service
        image: devlifestartup/pf_analytic_service:1.0.0
        ports:
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: pf-analytic-service
spec:
  selector:
    #app.kubernetes.io/name: cats-api
    app: pf-analytic-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
