k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlife
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /projects
        backend:
          service:
            name: pf-analytic-service
            port:
              number: 80
